okg4- OKG4Mgr enables integrated G4/Opticks running, to some extent

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -127,6 +127,8 @@ set(SOURCES
     CSteppingAction.cc
     CG4.cc
     OpticksG4Collector.cc
+    CRunAction.cc
+    CEventAction.cc
 )
 
 set(HEADERS
@@ -176,6 +178,8 @@ set(HEADERS
     CSteppingAction.hh
     CG4.hh
     OpticksG4Collector.hh
+    CRunAction.hh
+    CEventAction.hh
 )
 
 add_library(${name} SHARED ${SOURCES})
