--- a/okg4/tests/CMakeLists.txt
+++ b/okg4/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ project(${name})
 set(TESTS
     OKG4_LOGTest.cc
     OKG4_OpticksMgrTest.cc
-    OKG4Test.cc
+    OKG4MgrTest.cc
 )
 
 foreach(SRC ${TESTS})
