rearrange material map cross referencing to happen later, so TORCH step works in OKG4Test

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -71,6 +71,7 @@ set(SOURCES
     OpticksEventSpec.cc
     OpticksEvent.cc
     OpticksBufferControl.cc
+    OpticksActionControl.cc
     Indexer.cc
 
     OpticksFlags.cc
