OKG4Test integrated running shakedown continued, now --g4gun and default torch look better, still missing scintillation

--- a/ggeoview/CMakeLists.txt
+++ b/ggeoview/CMakeLists.txt
@@ -234,7 +234,7 @@ add_definitions(${DEFINITIONS})
 set(SOURCES
 
     GGV_LOG.cc
-    OpticksMgr.cc 
+    OKMgr.cc 
 )
 set(HEADERS
 
@@ -243,7 +243,7 @@ set(HEADERS
     GGV_HEAD.hh
     GGV_TAIL.hh
 
-    OpticksMgr.hh
+    OKMgr.hh
 )
 
 
