move high level propagation control into OKPropagation reducing duplication between OKMgr and OKG4Mgr

--- a/ggeoview/CMakeLists.txt
+++ b/ggeoview/CMakeLists.txt
@@ -235,6 +235,7 @@ set(SOURCES
 
     GGV_LOG.cc
     OKMgr.cc 
+    OKPropagator.cc 
 )
 set(HEADERS
 
@@ -244,6 +245,7 @@ set(HEADERS
     GGV_TAIL.hh
 
     OKMgr.hh
+    OKPropagator.hh
 )
 
 
