add OKG4Test with --g4gun argument and get it to pass

--- a/okg4/tests/CMakeLists.txt
+++ b/okg4/tests/CMakeLists.txt
@@ -16,5 +16,11 @@ foreach(SRC ${TESTS})
     add_test(${name}.${TGT} ${TGT})
     add_dependencies(check ${TGT})
 
+    add_test(${name}.${TGT}_g4gun ${TGT} --g4gun)   ## add test with an argument
+
 endforeach()
+
+
+
+
 
