move OEntry down to okc- OpticksEntry, add TrivialCheck for checking genstep/photon buffer consistency for the trivial entry point

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -70,6 +70,7 @@ set(SOURCES
     OpticksDomain.cc
     OpticksEventSpec.cc
     OpticksEvent.cc
+    OpticksEntry.cc
     OpticksBufferControl.cc
     OpticksActionControl.cc
     Indexer.cc
@@ -125,6 +126,7 @@ set(HEADERS
     OpticksDomain.hh
     OpticksEventSpec.hh
     OpticksEvent.hh
+    OpticksEntry.hh
     OpticksBufferControl.hh
     Indexer.hh
 
