simplify propagator by moving upload/download into OEvent, for simpler test setup

--- a/opticksop/tests/CMakeLists.txt
+++ b/opticksop/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ project(${name})
 #file(GLOB TEST_SOURCES "*Test.cc")
 set(TEST_SOURCES
     OpIndexerTest.cc
+    OpSeederTest.cc
 )
 
 foreach(SRC ${TEST_SOURCES})
