--- a/opticksnpy/tests/CMakeLists.txt
+++ b/opticksnpy/tests/CMakeLists.txt
@@ -46,7 +46,7 @@ NSphereTest.cc
 NTesselateTest.cc
 G4StepNPYTest.cc
 _TorchStepNPYTest.cc
-GenstepTest.cc
+FabStepTest.cc
 
 HitsNPYTest.cc
 _BoundariesNPYTest.cc
