rename opticksop- to okop-, finally get all opticks-t tests to pass again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ if(NOT (COMPUTE_CAPABILITY LESS 30))
        add_subdirectory(cudarap)        
        add_subdirectory(thrustrap)
        add_subdirectory(optixrap)
-       add_subdirectory(opticksop)
+       add_subdirectory(okop)
        add_subdirectory(opticksgl)
    else(CUDA_FOUND AND OptiX_FOUND)
        set(WITH_OPTIX OFF)
