--- a/okop/tests/CMakeLists.txt
+++ b/okop/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-set(name OpticksOpTest)
+set(name OKOPTest)
 project(${name})
 
 #file(GLOB TEST_SOURCES "*Test.cc")
@@ -14,7 +14,7 @@ foreach(SRC ${TEST_SOURCES})
 
     add_test(${name}.${TGT} ${TGT})
     add_dependencies(check ${TGT})
-    target_link_libraries(${TGT} ${LIBRARIES} OpticksOp)
+    target_link_libraries(${TGT} ${LIBRARIES} OKOP)
 
     install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
