investigate OptiX/CUDA interop issue for multievent in 3080, suspect manual buffer markDirty not being heeded by OptiX

--- a/okop/tests/CMakeLists.txt
+++ b/okop/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ project(${name})
 set(TEST_SOURCES
     OpIndexerTest.cc
     OpSeederTest.cc
+    dirtyBufferTest
 )
 
 foreach(SRC ${TEST_SOURCES})
