GSurLib/GSur preparation for post-cache creation of G4 surfaces in CGeometry that GDML failed to persist

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -13,6 +13,7 @@ set(TEST_SOURCES
     CPropLibTest.cc
     CTestDetectorTest.cc
     CGDMLDetectorTest.cc
+    CGeometryTest.cc
     CG4Test.cc
     G4MaterialTest.cc
     G4StringTest.cc
