rework GSur as can be multiple G4LogicalBorderSurface for each GSur according to PVPairs collected, start converting surface props

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -154,6 +154,7 @@ set(SOURCES
     CRecorder.cc
     CDetector.cc
     CGDMLDetector.cc
+    CSurLib.cc
     CMaker.cc
     CTestDetector.cc
     Rec.cc
@@ -210,6 +211,7 @@ set(HEADERS
     CRecorder.hh
     CDetector.hh
     CGDMLDetector.hh
+    CSurLib.hh
     CMaker.hh
     CTestDetector.hh
     Rec.hh
