add dindex option for debugging particular photon id, analogous to GPU pindex

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -68,6 +68,7 @@ set(SOURCES
     OpticksColors.cc
     Sparse.cc
     OpticksAna.cc
+    OpticksDbg.cc
     OpticksDomain.cc
     OpticksEventSpec.cc
     OpticksEvent.cc
@@ -128,6 +129,7 @@ set(HEADERS
     OpticksColors.hh
     Sparse.hh
     OpticksAna.hh
+    OpticksDbg.hh
     OpticksDomain.hh
     OpticksEventSpec.hh
     OpticksEvent.hh
