--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ set(TEST_SOURCES
     OpticksPrepareInstallCache.cc
     OpticksEventSpecTest.cc
     OpticksAnaTest.cc
+    OpticksDbgTest.cc
 )
 
 
