tlaser investigating post scatter 20% more G4 SURFACE_ABSORB for average optical surface, split OInterpolation identity and interpol tests

--- a/optixrap/tests/CMakeLists.txt
+++ b/optixrap/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ set(TEST_SOURCES
     bufferTest.cc
     OEventTest.cc
     OInterpolationTest.cc
+    OInterpolationIdentityTest.cc
 )
 
 foreach(SRC ${TEST_SOURCES})
