--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -10,7 +10,7 @@ set(_TEST_SOURCES
 
 set(TEST_SOURCES
 
-    CPropLibTest.cc
+    CMaterialLibTest.cc
     CTestDetectorTest.cc
     CGDMLDetectorTest.cc
     CGeometryTest.cc
