attempt to reuse standard GSurLib geometry to surface hookup lvn/pv1/pv2 with CTestDetector

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -161,6 +161,7 @@ set(SOURCES
     CSurfaceTable.cc
     CSurfaceBridge.cc
     COpticalSurface.cc
+    CBndLib.cc
 
     OpStatus.cc
     Format.cc
@@ -238,6 +239,7 @@ set(HEADERS
     CSurfaceTable.hh
     CSurfaceBridge.hh
     COpticalSurface.hh
+    CBndLib.hh
 
     OpStatus.hh
     Format.hh
