isolated rayleigh scattering comparisons are matching in cfg4/OpRayleighTest and oxrap/ORayleighTest, yet the insitu scatter distribs in OKG4 are discrepant

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -19,7 +19,8 @@ set(TEST_SOURCES
     G4StringTest.cc
     G4BoxTest.cc
     CCollectorTest.cc
-    CInterpolationTest
+    CInterpolationTest.cc
+    OpRayleighTest.cc 
 
 )
 
