--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -21,7 +21,7 @@ set(TEST_SOURCES
     CCollectorTest.cc
     CInterpolationTest.cc
     OpRayleighTest.cc 
-    GROUPVELTest.cc 
+    CGROUPVELTest.cc 
 
 )
 
